# CMC

./: CMakeLists.txt  LICENSE  README.md
include/: glad.h
src/c_files/: camera.c  chunk.c  chunk_manager.c  dependencies.c  game.c  game_data.c  glad.c  main.c  math_help_functions.c  opengl_help_functions.c  osn-noise.c  player.c  voxel_engine.c  window.c
src/h_files/: camera.h  chunk.h  chunk_manager.h  game.h  game_data.h  math_help_functions.h  opengl_help_functions.h  player.h  settings.h  voxel_engine.h  window.h
src/shader_files/: frag.glsl  vert.glsl
